styles.css
/* ... */
@media only screen and (max-width: 400px) {

  .particle {
    display: none;
  }

  nav {
    font-size: 12px;
  }

  #landing .title {
    font-size: 70px;
  }

  #landing .sub-text {
    font-size: 15px;
  }

  #install .title,
  #about .title {
    font-size: 30px;
    margin-bottom: 30px;
  }

  .gdg-logo img {
    height: 75px;
  }

  #contact .sub-text {
    padding: 0 30px;
  }
}

.body,
.wrapper {
  position: absolute;
  top: 0px;
  width: 100%;
  height: 100%;
  margin: 0;
  overflow-y: hidden;
}

.body {
  z-index: 1;
}

.wrapper {
  z-index: 2;
}

#sessions {
  width: 102vw;
  transform: translateX(-1vw);
  background-color: #642b73;
  background: -webkit-linear-gradient(45deg, #642b73, #c6426e);
  background: linear-gradient(45deg, #642b73, #c6426e);
  background-image: url("./assets/bg1.svg");
  background-size: cover;
  background-position: center center;
}

#sessions > div {
  background-image: url("./assets/Asset\ 1.svg");
  background-size: 90% 90%;
  background-repeat: no-repeat;
  background-position: center center;
}

#speakers {
  width: 102vw;
  transform: translateX(-1vw);
  background-color: #79318c;
  background: -webkit-linear-gradient(-45deg, #3adfab, #79318c);
  background: linear-gradient(-45deg, #3adfab, #79318c);
  background-image: url("./assets/bg2.svg");
  background-size: cover;
  background-position: center center;
}

#speakers > div {
  background-image: url("./assets/Asset\ 2\ \(2\).svg");
  background-size: 90% 90%;
  background-repeat: no-repeat;
  background-position: center center;
}

.card {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  height: 500px;
  width: 380px;
  background: #ffffff;
  border-radius: 12px;
  margin: -10px;
  transform: scale(0.94);
  color: #666666;
  padding: 30px;
  text-align: left;
  font-size: 15px;
}

nav a {
  text-decoration: none;
  color: inherit;
}

#sessions .card-left {
  background: #642b73;
  background: -webkit-linear-gradient(135deg, #642b73, #c6426e);
  background: linear-gradient(135deg, #642b73, #c6426e);
}

#speakers .card-left {
  background: #79318c;
  background: -webkit-linear-gradient(135deg, #3adfab, #79318c);
  background: linear-gradient(135deg, #3adfab, #79318c);
}

.card-left {
  display: flex;
  flex-direction: column;
  font-size: 45px;
  color: #ffffff;
  box-shadow: 0px 0px 17px 4px rgba(0, 0, 0, 0.25);
  z-index: 60;
  transform: scale(1);
}

.centered {
  display: flex;
  justify-content: center;
  align-items: center;
}

.particles {
  height: 100vh;
  width: 100vw;
  position: absolute;
  top: 0;
  left: 0;
}

.particle {
  height: 30px;
  width: 30px;
  position: absolute;
}

.particle:nth-child(1) {
  animation: spin 2.5s linear infinite;
  top: 20%;
  right: 10%;
}

.particle:nth-child(2) {
  animation: spin 2.5s linear infinite reverse;
  top: 22%;
  left: 15%;
}

.particle:nth-child(3) {
  animation: spin 1.5s linear 1s infinite;
  bottom: 10%;
  left: 20%;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#card-logo {
  width: 50%;
  margin-bottom: 20px;
}

@-webkit-keyframes gradientAnim1 {
  0% {
    background-position: 86% 0%;
  }
  50% {
    background-position: 15% 100%;
  }
  100% {
    background-position: 86% 0%;
  }
}
@-moz-keyframes gradientAnim1 {
  0% {
    background-position: 86% 0%;
  }
  50% {
    background-position: 15% 100%;
  }
  100% {
    background-position: 86% 0%;
  }
}
@keyframes gradientAnim1 {
  0% {
    background-position: 86% 0%;
  }
  50% {
    background-position: 15% 100%;
  }
  100% {
    background-position: 86% 0%;
  }
}

@-webkit-keyframes gradientAnimation2 {
  0% {
    background-position: 0% 7%;
  }
  50% {
    background-position: 100% 94%;
  }
  100% {
    background-position: 0% 7%;
  }
}
@-moz-keyframes gradientAnimation2 {
  0% {
    background-position: 0% 7%;
  }
  50% {
    background-position: 100% 94%;
  }
  100% {
    background-position: 0% 7%;
  }
}
@keyframes gradientAnimation2 {
  0% {
    background-position: 0% 7%;
  }
  50% {
    background-position: 100% 94%;
  }
  100% {
    background-position: 0% 7%;
  }
}

.scroll-link {
  cursor: pointer;
}

